--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,42 +1,43 @@
 <!doctype html>
 <html>
-  <head>
-    <base href="/">
-    <meta charset="utf-8">
-    <title>Empty Angular</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/png" href="http://www.iconj.com/icon.php?pid=stcvi43iv1" />
-  
-    <!-- build:css({.tmp,src}) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- run `gulp inject` to automatically populate bower styles dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
 
-    <!-- build:css({.tmp,src}) styles/app.css -->
-    <link rel="stylesheet" href="styles/main.css"/>
-    <!-- endbuild -->
-  </head>
+<head>
+  <base href="/">
+  <meta charset="utf-8">
+  <title>Empty Angular</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <link rel="icon" type="image/png" href="http://www.iconj.com/icon.php?pid=stcvi43iv1" />
 
-
-  <body data-ng-app="app">
-    <ui-view></ui-view>
-  </body>
-
-  <!-- build:js({.tmp,src}) scripts/vendor.js -->
-  <!-- bower:js -->
-  <!-- run `gulp inject` to automatically populate bower script dependencies -->
+  <!-- build:css({.tmp,src}) styles/vendor.css -->
+  <!-- bower:css -->
+  <!-- run `gulp inject` to automatically populate bower styles dependencies -->
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:js({.tmp,src}) scripts/app.js -->
-  <!-- inject:js -->
-  <!-- js files will be automatically insert here -->
-  <!-- endinject -->
-  <!-- inject:partials -->
-  <!-- angular templates will be automatically converted in js and inserted here -->
-  <!-- endinject -->
+  <!-- build:css({.tmp,src}) styles/app.css -->
+  <link rel="stylesheet" href="styles/main.css" />
   <!-- endbuild -->
-</html>
+</head>
 
+
+<body data-ng-app="app">
+  <div ng-include="'app/layout/layout.html'"></div>
+</body>
+
+<!-- build:js({.tmp,src}) scripts/vendor.js -->
+<!-- bower:js -->
+<!-- run `gulp inject` to automatically populate bower script dependencies -->
+<!-- endbower -->
+<!-- endbuild -->
+
+<!-- build:js({.tmp,src}) scripts/app.js -->
+<!-- inject:js -->
+<!-- js files will be automatically insert here -->
+<!-- endinject -->
+<!-- inject:partials -->
+<!-- angular templates will be automatically converted in js and inserted here -->
+<!-- endinject -->
+<!-- endbuild -->
+
+</html>
