--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,10 +4,15 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
-  <title>Empty Angular</title>
+  <title>Kowloon</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/png" href="http://www.iconj.com/icon.php?pid=stcvi43iv1" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#474747">
 
   <!-- build:css({.tmp,src}) styles/vendor.css -->
   <!-- bower:css -->
