--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,10 +1,40 @@
 <!doctype html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title>Site goes here</title>
+  <base href="/">
+  <meta charset="utf-8">
+  <title>Kowloon</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#474747">
+
+  <link rel="stylesheet" href="styles/vendor-6831bd2773.css">
+
+  <link rel="stylesheet" href="styles/app-72bc6c7909.css">
+
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  </script>
 </head>
-<body>
-    <h1>The site goes here!</h1>
+
+
+<body data-ng-app="app">
+  <div ng-include="'app/layout/layout.html'"></div>
 </body>
+
+<script src="scripts/vendor-16c976a9a8.js"></script>
+
+<script src="scripts/app-61ad254920.js"></script>
+
 </html>
